--- a/static/style.css
+++ b/static/style.css
@@ -127,8 +127,7 @@
 }
 
 .feed-item {
-    width: 750px;
-    max-width: 100%;
+    max-width: 750px;
 }
 
 .centroid {
@@ -139,8 +138,4 @@
 
 .s-sm {
     font-size: 15pt;
-}
-
-.p-absolute {
-    position: absolute;
 }
