--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@
 }
 
 .controll {
+    background-color: white;
     cursor: pointer;
     margin: 5px;
 }
@@ -139,3 +140,42 @@
 .s-sm {
     font-size: 15pt;
 }
+
+.p-absolute {
+    position: absolute;
+}
+
+.s-xsm {
+    font-size: 12pt;
+}
+
+.extend-btn {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px gray;
+    padding: 5px 0px 5px 0px;
+    display: none;
+}
+
+.extend-btn.active{
+    display: inherit;
+}
+
+.extend-btn-controll {
+    cursor: pointer;
+    padding: 15px 40px 10px 10px;
+}
+
+.extend-btn-controll:hover {
+    background-color: grey;
+}
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
