allow disallow join class

--- a/static/style.css
+++ b/static/style.css
@@ -127,6 +127,11 @@
   justify-content: center;
 }
 
+.d-middle-y {
+  display: flex;
+  align-items: center;
+}
+
 .d-centroid {
   display: flex;
   justify-content: center;
